<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <repositories>
    <repository>
        <id>repo.bodar.com</id>
        <url>http://repo.bodar.com</url>
    </repository>
</repositories>
  <modelVersion>4.0.0</modelVersion>
  <groupId>TestBDD</groupId>
  <artifactId>TestBDD</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  

  
  <build>
    <sourceDirectory>src</sourceDirectory>
   
    <outputDirectory>src</outputDirectory>
    <testOutputDirectory>src</testOutputDirectory>
    <resources>
      <resource>
        <directory>src/test/resources</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
      <testResources>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
    </testResources>
    <directory>src/test/resources</directory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.14</version>
                <executions>
                    <execution>
                        <id>acceptance-test</id>
                        <phase>unittest</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                         
                            <forkCount>5</forkCount>
                            <reuseForks>true</reuseForks>
                             <outputEncoding>UTF-8</outputEncoding>  
 							
                            <argLine>-Dfile.encoding=UTF-8</argLine>
                            <usefile>false</usefile>  					
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=256m</argLine>                      
                            <includes>
                                <include>**/*Test.java</include>
                            </includes>
                            <testFailureIgnore>true</testFailureIgnore>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
             <plugin>
         <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>2.11</version>
          		<configuration>
                            <perCoreThreadCount>true</perCoreThreadCount>
                            <threadCount>2</threadCount>
                             <parallel>classes</parallel>  
 							<includes>
                                <include>**/*Test.java</include>
                            </includes>
                </configuration>                                                        
                <executions>
                    <execution>
                        <id>acceptance-test</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>                        
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.3.2</version>
                <executions>
                    <execution>
                        <phase>post-test</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>main.java.framework.Report</mainClass>
                </configuration>
            </plugin>
             <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>0.0.6</version>
                <executions>
                    <execution>
                        <id>execution</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>RunBDDTest</projectName>
                            <outputDirectory>results/html</outputDirectory>
                            <cucumberOutput>results/json/cucumber-report.json</cucumberOutput>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
    </plugins>
  </build>
  <dependencies>
  
  	<dependency>
  		<groupId>org.seleniumhq.selenium</groupId>
  		<artifactId>selenium-server</artifactId>
  		<version>2.43.0</version>
  	</dependency>
 
   
    <dependency>
        <groupId>info.cukes</groupId>
        <artifactId>cucumber-junit</artifactId>
        <version>1.2.0</version>
      
    </dependency>
    
    <dependency>
    <groupId>com.google.guava</groupId>
    	<artifactId>guava</artifactId>
    	<version>18.0</version>
	</dependency>
    
    <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.12</version>
     
    </dependency>
    
    
    <dependency>
    	<groupId>info.cukes</groupId>
    	<artifactId>cucumber-picocontainer</artifactId>
    	<version>1.2.0</version>
	</dependency>
	
	<dependency>
    	<groupId>org.picocontainer</groupId>
    	<artifactId>picocontainer</artifactId>
    	<version>2.14.3</version>
	</dependency>

    <dependency>
    	<groupId>info.cukes</groupId>
    	<artifactId>cucumber-java</artifactId>
    	<version>1.2.0</version>
	</dependency>
	
	<dependency>
    	<groupId>info.cukes</groupId>
    	<artifactId>cucumber-core</artifactId>
    	<version>1.2.0</version>
	</dependency>
	
	<dependency>
    	<groupId>info.cukes</groupId>
    	<artifactId>cucumber-html</artifactId>
    	<version>0.2.3</version>
	</dependency>
	
	<dependency>
    	<groupId>info.cukes</groupId>
    	<artifactId>cucumber-jvm-deps</artifactId>
    	<version>1.0.3</version>
	</dependency>
	
	<dependency>
    	<groupId>net.masterthought</groupId>
    	<artifactId>cucumber-reporting</artifactId>
    	<version>0.0.23</version>
	</dependency>
	
	<dependency>
    	<groupId>info.cukes</groupId>
    	<artifactId>gherkin</artifactId>
    	<version>2.12.2</version>
	</dependency>
	
	<dependency>
    	<groupId>info.cukes</groupId>
    	<artifactId>gherkin-jvm-deps</artifactId>
    	<version>1.0.2</version>
	</dependency>
	
	<dependency>
        <groupId>com.googlecode.totallylazy</groupId>
        <artifactId>totallylazy</artifactId>
        <version>1049</version>
    </dependency>
    
    
    <dependency>
    	<groupId>net.masterthought</groupId>
    	<artifactId>maven-cucumber-reporting</artifactId>
    	<version>0.0.6</version>
	</dependency>

  </dependencies>
  <name>TestBDD</name>
</project>